--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <title>Código Irreverente</title>
+        <title>Hard Code Caffé</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <meta name="description" content="Código Irreverente">
         <meta name="keywords" content="web design, web development,css, html, css3, html5, javascript, jquery">
