--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <p class="copyright">
                 <span>
-                    © Hard Code Caffé 2016 | 
+                    © Hard Code Caffé <script> document.write(new Date().getFullYear())</script> | 
                     <a href="mailto:hello@hardcodecaffe.com">hello@hardcodecaffe.com</a>
                 </span>
             </p>
@@ -39,7 +39,7 @@
                 m.parentNode.insertBefore(a, m)
             })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-            ga('create', 'UA-44524707-9', 'auto');
+            ga('create', 'UA-66866971-1', 'auto');
             ga('send', 'pageview');
 
         </script>
