Update message and image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="logo">
                 <!--<img src="ci.png">-->
-                <p class="work-text">Freelancig for PME's</p>
+                <p class="work-text">Work Hard, Play Hard</p>
             </div>
             <p class="copyright">
                 <span>
